--- a/07_Angular/una-web/src/app/app.component.html
+++ b/07_Angular/una-web/src/app/app.component.html
@@ -1,7 +1,29 @@
 <!-- <h1>Una web</h1> -->
 <!-- <h2>{{title}}</h2> -->
 <div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+        <a class="navbar-brand" href="#">SUPERHEROES</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/heroes">Show list!<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/newheroes">New heroe</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <router-outlet></router-outlet>
     <!--<app-mi-control></app-mi-control>-->
-    <app-heros-list></app-heros-list>
+    <!--<app-heros-list></app-heros-list>-->
     <app-messages></app-messages>
+    <!--<app-new-hero></app-new-hero>-->
 </div>
