--- a/07_Angular/una-web/src/app/app.component.html
+++ b/07_Angular/una-web/src/app/app.component.html
@@ -16,11 +16,12 @@
                     <a class="nav-link" routerLink="/newheroes">New heroe</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+                    <a class="nav-link" routerLink="/dashboard">Dashboard</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <app-hero-rest></app-hero-rest>
     <router-outlet></router-outlet>
     <!--<app-mi-control></app-mi-control>-->
     <!--<app-heros-list></app-heros-list>-->
